# webauth

./: Cargo.toml  LICENSE-MIT  README.md
examples/: basic.rs  openid_auth.rs
examples/basic/: http_client.rs  openid.rs
examples/openid_auth/: http_client.rs  openid.rs
src/: darwin.rs  error.rs  lib.rs  webview.rs
