[package]
name = "webauth"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2.0.12"
url = "2.5.4"

[target.'cfg(target_vendor = "apple")'.dependencies]
futures = "0.3.31"
objc2 = "0.6.1"
objc2-foundation = { version = "0.3.1", features = [
    "NSString",
    "NSURL",
    "NSObjCRuntime",
] }
objc2-authentication-services = { version = "0.3.1", default-features = false, features = [
    "ASWebAuthenticationSession",
    "ASWebAuthenticationSessionCallback",
    "block2",
] }
block2 = "0.6.1"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.3.1" }

[dev-dependencies]
wae = "0.2.0"
winit = "0.30.11"
