[package]
name = "webauth"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2.0.16"
url = ">=2.4.0, <2.6.0"
futures = "0.3.31"
tracing = "0.1.41"

[target.'cfg(target_vendor = "apple")'.dependencies]
objc2 = "0.6.2"
objc2-foundation = { version = "0.3.1", features = [
    "NSString",
    "NSURL",
    "NSObjCRuntime",
] }
objc2-authentication-services = { version = "0.3.1", default-features = false, features = [
    "ASWebAuthenticationSession",
    "ASWebAuthenticationSessionCallback",
    "block2",
] }
block2 = "0.6.1"
dispatch2 = "0.3.0"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.3.1" }

[target.'cfg(not(target_vendor = "apple"))'.dependencies]
wry = { version = "0.53.3", features = ["tracing"] }

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18" # Use the version wry uses

[dev-dependencies]
wae = "0.2.0"
winit = "0.30.11"
openidconnect = { version = "4.0.0", default-features = false }
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive"] }
nyquest = { version = "0.2.0", features = ["async"] }
nyquest-preset = { version = "0.2.0", default-features = false, features = [
    "async",
] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
futures-timer = "3.0.3"
